microservices/service-2/eks-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices
  name: service-2
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: service-2
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: microservices
  name: ingress-service-2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-2
              servicePort: 80
